crates/aven-check/tests/fixtures/check/valid/literal-set-equality.av
labels: Set(Text) = @{ "aven", "lang" }

baseLeft: Bool = labels == ("aven" | "lang")
baseRight: Bool = ("aven" | "lang") == labels
