crates/aven-check/tests/fixtures/check/invalid/qualified-operator-ambiguous.av
ambiguous = (value: Int): Int
  hidden: { <(Self): Bool, .. }
=>
  value
